--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
       <p>&copy; 2025 THE NEXT STEP. Alle Rechte vorbehalten.</p>
       <div class="footer-legal">
         <a href="impressum.html" class="footer-link">Impressum</a> |
-        <a href="datenschutz.html" class="footer-link">Datenschutz</a> |
+        <a href="datenschutz.html" class="footer-link">Datenschutz</a>
       </div>
     </div>
   </footer>
